fix standards tag visibility

--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -62,7 +62,7 @@
 }
 
 .standards-tag {
-  background-color: gold;
+  background-color: #FFBE2F;
 }
 
 .icon-tag {
